--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"/>
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
+        <script src="https://amelmer.github.io/gcfd-wic/austin_data.js"></script>
         <style>
             #map {
                 width: 100vw;
@@ -25,9 +26,7 @@
                 attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Tiles style by <a href="https://www.hotosm.org/" target="_blank">Humanitarian OpenStreetMap Team</a> hosted by <a href="https://openstreetmap.fr/" target="_blank">OpenStreetMap France</a>'
             }).addTo(map);
 
-            var austin = new L.GeoJSON(
-                'https://amelmer.github.io/gcfd-wic/austin.geojson'
-            ).addTo(map)
+            var austin = new L.geojson(austin).addTo(map)
         </script>
     </body>
 </html>
