--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Tiles style by <a href="https://www.hotosm.org/" target="_blank">Humanitarian OpenStreetMap Team</a> hosted by <a href="https://openstreetmap.fr/" target="_blank">OpenStreetMap France</a>'
             }).addTo(map);
 
-            var austin = L.geoJson(austin).addTo(map)
+            var austin = L.geoJSON(austin).addTo(map)
         </script>
     </body>
 </html>
