--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
                 // loop through our density intervals and generate a label with a colored square for each interval
                 for (var i = 0; i < types.length; i++) {
                     div.innerHTML +=
-                    '<i style="background:' + getColor(types[i]) + '"></i> ' +
-                    types[i]+'<br/>';
+                    '<i style="background:' + getColor(types[i]) + '"></i> ' + types[i]+'<br/>';
                 }
                 return div;
             };
