--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 line-height: 18px;
                 color: #000000;
                 background-color: white;
-                opacity: 0.7;
+                opacity: 1;
                 padding: 6px 10px 6px 6px;
             }
             
@@ -36,28 +36,28 @@
         <div id="map"></div>
         <script type="text/javascript">
             function getColor(value) {
-                return value == "School" ? '#353CC7':
+                return value == "School" ? '#6dbaf3':
                 value == "Health Center" ? '#EB12A8': 
-                value == "Community Center" ? '#EBA812': 
-                value == "Head Start" ? '#287195':
-                value == "Library" ? '#12EBD7':
-                value == "Community Group" ? '#7735C7':
-                value == "Food Pantry" ? '#3CC735':
-                value == "Childcare" ? '#3CC735':
-                value == "Learning Center" ? '#3CC735':
-                value == "Daycare" ? '#3CC735':
-                value == "Non-Profit" ? '#3CC735':
-                value == "Church" ? '#3CC735':
-                value == "Social Service Org." ? '#3CC735':
-                value == "Housing Org." ? '#3CC735':
-                value == "Grocery Store" ? '#3CC735':
-                value == "Corner Store" ? '#3CC735':
+                value == "Community Center" ? '#Efb875': 
+                value == "Head Start" ? '#6d9af3':
+                value == "Library" ? '#C05260':
+                value == "Community Group" ? '#E9850d':
+                value == "Food Pantry" ? '#C7f588':
+                value == "Childcare" ? '#6d6ff3':
+                value == "Learning Center" ? '#8665f5':
+                value == "Daycare" ? '#6de0f3':
+                value == "Non-Profit" ? '#B112a0':
+                value == "Church" ? '#Fba6fd':
+                value == "Social Service Org." ? '#Fda6cf':
+                value == "Housing Org." ? '#F73993':
+                value == "Grocery Store" ? '#56c658':
+                value == "Corner Store" ? '#19af1a':
                 '#B4B4B4';
             };
 
             function getColorOutline(value) {
-                return value == "Outreach" ? '#a3e4b9':
-                value == "Awareness" ? '#d88f24':
+                return value == "Outreach" ? '#25be53':
+                value == "Awareness" ? '#9325be':
                 '#B4B4B4';
             };
 
@@ -70,7 +70,7 @@
             var onEachFeature = function(feature, layer) { 
                 if (feature.properties) {
                     var prop = feature.properties;
-                    var popup = '<h3>'+prop['A']+'</h3>'+'<b>Partner Type</b>: '+prop['G']+', '+prop['M'];
+                    var popup = '<h3>'+prop['A']+'</h3>'+'<b>Partner Type</b>: '+prop['G']+', '+prop['M'] + '<br/><b>Phone Number</b>: ' + prop['F'];
                     feature.layer = layer;
                     layer.bindPopup(popup, {minWidth: 100});
                 }
@@ -127,8 +127,10 @@
             var legend = L.control({position: 'bottomright'})
             legend.onAdd = function (map) {
                 var div = L.DomUtil.create('div', 'info legend'),
-                    types = ["School", "Health Center", "Community Center", "Head Start", "Library", "Community Group", "Food Pantry", "Childcare", 
-                    "Learning Center", "Daycare", "Non-Profit", "Church", "Social Service Org.", "Housing Org.", "Grocery Store", "Corner Store"],
+                    types = ["School", "Head Start", "Childcare", "Learning Center", "Daycare", 
+                    "Community Center", "Community Group", "Library", "Health Center", "Church", 
+                    "Non-Profit", "Social Service Org.", "Housing Org.", "Food Pantry", "Grocery Store", 
+                    "Corner Store"],
                     labels = [];
                     div.innerHTML += '<b>Legend</b><br/>'
     
