--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             }
 
             var map = L.map('map', {
-                center: [41.8781, -87.6298],
+                center: [41.814874392407425, -87.62204495901932],
                 zoom: 12
             });
 
